solve layout problem in header file.

--- a/interest-studio/src/style/components/header.css
+++ b/interest-studio/src/style/components/header.css
@@ -5,13 +5,15 @@ h1{
 .links{
   font-family: 'Montserrat', sans-serif;
   padding: 1%;
-  text-decoration: none;
-  font-size: 16px;
+
+ font-size: 16px;
   font-weight: bold;
   color: #fff;
-	height: 200px;
+	height: 40px;
   background: -webkit-linear-gradient(right, #7579ff, #b224ef);
   padding-top: 1%;
+ display:inline-block;
+ margin-right:1%;
 
 
   }
@@ -23,6 +25,7 @@ background:-webkit-linear-gradient(right, #b224ef, #7579ff);
 {
 padding-top:2vh;
 padding-bottom: 3vh;
+margin-left: 1%;
 }
 #logo
 {
